# template-renderer-rs

./: Cargo.toml  README.md  config.toml
schematics/custom-properties/: package.json  schema.json  {{componentName_snake_case}}.js
schematics/example/: index.js  package.json  schema.json
src/: main.rs
src/core/: cli.rs  commands.rs  config.rs  input.rs  mod.rs  render.rs  schematic.rs
