[package]
name = "template-renderer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
cli-table = "0.5.0"
colored = "3.0.0"
dialoguer = "0.12.0"
directories = "6.0.0"
handlebars = "6.3.2"
indicatif = "0.18.0"
jsonschema = "0.33.0"
serde = "1.0.219"
serde_json = "1.0.143"
toml = "0.9.5"
